First case study

--- a/main.bib
+++ b/main.bib
@@ -142,3 +142,19 @@
   year={2002},
   publisher={Nature Publishing Group}
 }
+@article{bosch2004primary,
+  title={Primary liver cancer: worldwide incidence and trends},
+  author={Bosch, F Xavier and Ribes, Josepa and Diaz, Mireia and Cleries, Ramon},
+  journal={Gastroenterology},
+  volume={127},
+  number={5},
+  pages={S5--S16},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{li2018mutational,
+  title={A mutational signature associated with alcohol consumption and prognostically significantly mutated driver genes in esophageal squamous cell carcinoma},
+  author={Li, XC and Wang, MY and Yang, M and Dai, HJ and Zhang, BF and Wang, W and Chu, XL and Wang, X and Zheng, H and Niu, RF and others},
+  journal={Annals of Oncology},
+  year={2018}
+}
