--- a/main.tex
+++ b/main.tex
@@ -70,12 +70,12 @@ To our knowledge, this is a new method for exploring mutational signatures along
 One use case for this tool is the analysis of relationships between signature exposures and clinical variables.
 Interactive sorting and dynamic calculations of signature exposures allow trends to be observed quickly.
 Although the relationship between liver cancer and alcohol consumption has long been documented \cite{bosch2004primary}, the relationship between mutational signatures and alcohol consumption has not been extensively examined.
-Recently, Li \textit{et al}. 2018 identified a mutational signature based on esophageal squamous cell carcinoma that resembles COSMIC signatures 1, 2, 13 and 16, and is associated with alcohol usage\cite{li2018mutational}.
-To look for a relationship in liver cancer within the Mutation Signature Explorer, the PCAWG Liver Cancer - NCC, JP cohort was selected, along with the COSMIC LICA signatures preset for liver cancer. 
-Then, the Signature Exposures with Clinical Data plot was selected to examine the alcohol usage clinical variable.
-Using the sorting functionality, we first sort by clinical variable $\rightarrow$ alcohol usage.
+Recently, Li \textit{et al}. 2018 identified a mutational signature associated with alcohol usage in esophageal squamous cell carcinoma that resembles COSMIC signatures 1, 2, 13 and 16\cite{li2018mutational}.
+To look for a relationship in liver cancer with the Mutation Signature Explorer, we can select the PCAWG Liver Cancer - NCC, JP cohort, along with the COSMIC LICA signatures preset for liver cancer. 
+Then, to examine the alcohol usage clinical variable, we can select the Signature Exposures with Clinical Data plot.
+Using the sorting functionality, we first sort by the alcohol usage clinical variable.
 With no trends immediately apparent, we can now sort by signature values.
-Sorting by COSMIC signature 12 and normalizing the signature exposures, we can see that only two alcohol-free donors are the first 14 of 28 donors (Figure \ref{fig:caseStudy1_sig12}).
+Sorting by COSMIC signature 12 and normalizing the signature exposures, we can see that only two alcohol-free donors are in the top 14 of 28 donors (Figure \ref{fig:caseStudy1_sig12}).
 \begin{figure}[h]
     \centering
     \frame{\includegraphics[width=0.75\columnwidth]{figures/case_study1.png}}
@@ -85,16 +85,14 @@ Sorting by COSMIC signature 12 and normalizing the signature exposures, we can s
 Hovering over the samples and looking at the y-axis, we can see that the contribution of signature 12 ranges from over 10\% to just under 50\% for all samples.
 Using this information, one could perform further statistical analysis on this data or seek out additional liver cancer mutation data to analyze.
 
-Interestingly, when sorting by COSMIC signatures 1 and 16, signatures both present in liver cancer and similar to that of Li \textit{et al}. 2018, a similar trend in alcohol usage arose (only two alcohol-free donors in the top half of donors).
-However, as one can tell by looking at the legend, the contributions from these signatures are too low to be visible for any sample in the plot.
+Interestingly, when sorting by COSMIC signatures 1 and 16 - signatures both present in liver cancer and that resemble the Li \textit{et al}. 2018 signature, a similar trend in alcohol usage arises (only two alcohol-free donors in the top half of donors).
+However, the contributions from these two signatures are too low to be visible for any sample in the plot.
 
 
 \subsection{Hypermutation and Mutation Category}
 Another use case is the analysis of the relationship between hypermutation and mutation category.
-For SNVs, the mutation category is the left flanking base pair, the mutation reference base pair, the variant base pair, and the right flanking base pair.
-These categories are assigned colors on rainfall plots to allow this type of relationship (or lack thereof) to be quickly spotted.
-
-Connections generally assumed to exist can be verified and examined....
+For SNVs, the mutation category is the 5' flanking base pair, the mutation reference base pair, the variant base pair, and the 3' flanking base pair.
+Mutations are assigned colors based on mutation categories on the rainfall plots to allow this type of relationship (or lack thereof) to be quickly spotted.
 
 When looking at the kataegis plot on chromosome 1 for the PCAWG-PRAD-UK (Prostate Adenocarcinoma) cohort...
 
