Minor grammar things

--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@ Mutations are colored according to one of 96 mutation categories (5' flanking ba
 Rainfall plots are commonly used to examine regions of hypermutation, as they allow these regions to be easily identified by tight vertical clusters of mutations. 
 Similar rainfall plots can be seen in Figure 4 of Nik-Zainal \textit{et al.} 2012\cite{nik2012mutational} and in Figure 6 of Alexandrov \textit{et al}. 2013\cite{alexandrov2013signatures}.
 
-To identify samples containing instances of localized hypermutation kataegic events can be highlighted along the genome in a second type of plot.
+To identify samples containing instances of localized hypermutation, kataegic events can be highlighted along the genome in a second type of plot.
 Along the vertical axis are samples, and along the horizontal axis is the genome.
 Users can zoom and pan along each chromosome, and easily pinpoint kataegis events by the dark bars located on mutations in kataegis regions.
 Samples are grouped by sequencing project and cancer type.
