Feedback - in progress

--- a/main.bib
+++ b/main.bib
@@ -158,3 +158,43 @@
   journal={Annals of Oncology},
   year={2018}
 }
+@article{zou2018validating,
+  title={Validating the concept of mutational signatures with isogenic cell models},
+  author={Zou, Xueqing and Owusu, Michel and Harris, Rebecca and Jackson, Stephen P and Loizou, Joanna I and Nik-Zainal, Serena},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={1744},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+@article{shiraishi2015simple,
+  title={A simple model-based approach to inferring and visualizing cancer mutation signatures},
+  author={Shiraishi, Yuichi and Tremmel, Georg and Miyano, Satoru and Stephens, Matthew},
+  journal={PLoS genetics},
+  volume={11},
+  number={12},
+  pages={e1005657},
+  year={2015},
+  publisher={Public Library of Science}
+}
+@article{davies2017hrdetect,
+  title={HRDetect is a predictor of BRCA1 and BRCA2 deficiency based on mutational signatures},
+  author={Davies, Helen and Glodzik, Dominik and Morganella, Sandro and Yates, Lucy R and Staaf, Johan and Zou, Xueqing and Ramakrishna, Manasa and Martin, Sancha and Boyault, Sandrine and Sieuwerts, Anieta M and others},
+  journal={Nature medicine},
+  volume={23},
+  number={4},
+  pages={517},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+@article{pilati2017mutational,
+  title={Mutational signature analysis identifies MUTYH deficiency in colorectal cancers and adrenocortical carcinomas},
+  author={Pilati, Camilla and Shinde, Jayendra and Alexandrov, Ludmil B and Assi{\'e}, Guillaume and Andr{\'e}, Thierry and H{\'e}lias-Rodzewicz, Zofia and Ducoudray, Romain and Le Corre, Delphine and Zucman-Rossi, Jessica and Emile, Jean-Fran{\c{c}}ois and others},
+  journal={The Journal of pathology},
+  volume={242},
+  number={1},
+  pages={10--15},
+  year={2017},
+  publisher={Wiley Online Library}
+}
