Update regarding existing visualization tools

--- a/main.bib
+++ b/main.bib
@@ -198,3 +198,36 @@
   year={2017},
   publisher={Wiley Online Library}
 }
+@misc{cerami2012cbio,
+  title={The cBio cancer genomics portal: an open platform for exploring multidimensional cancer genomics data},
+  author={Cerami, Ethan and Gao, Jianjiong and Dogrusoz, Ugur and Gross, Benjamin E and Sumer, Selcuk Onur and Aksoy, B{\"u}lent Arman and Jacobsen, Anders and Byrne, Caitlin J and Heuer, Michael L and Larsson, Erik and others},
+  year={2012},
+  publisher={AACR}
+}
+@article{gao2013integrative,
+  title={Integrative analysis of complex cancer genomics and clinical profiles using the cBioPortal},
+  author={Gao, Jianjiong and Aksoy, B{\"u}lent Arman and Dogrusoz, Ugur and Dresdner, Gideon and Gross, Benjamin and Sumer, S Onur and Sun, Yichao and Jacobsen, Anders and Sinha, Rileen and Larsson, Erik and others},
+  journal={Sci. Signal.},
+  volume={6},
+  number={269},
+  pages={pl1--pl1},
+  year={2013},
+  publisher={American Association for the Advancement of Science}
+}
+
+@misc{goldman2016ucsc,
+  title={The UCSC Xena system for integrating and visualizing functional genomics},
+  author={Goldman, Mary and Craft, Brian and Zhu, Jingchun and Swatloski, Teresa and Cline, Melissa and Haussler, David},
+  year={2016},
+  publisher={AACR}
+}
+@article{goldman2014ucsc,
+  title={The UCSC cancer genomics browser: update 2015},
+  author={Goldman, Mary and Craft, Brian and Swatloski, Teresa and Cline, Melissa and Morozova, Olena and Diekhans, Mark and Haussler, David and Zhu, Jingchun},
+  journal={Nucleic acids research},
+  volume={43},
+  number={D1},
+  pages={D812--D817},
+  year={2014},
+  publisher={Oxford University Press}
+}
