Feedback 2 - in progress

--- a/main.bib
+++ b/main.bib
@@ -231,3 +231,23 @@
   year={2014},
   publisher={Oxford University Press}
 }
+@article{nik2015genome,
+  title={The genome as a record of environmental exposure},
+  author={Nik-Zainal, Serena and Kucab, Jill E and Morganella, Sandro and Glodzik, Dominik and Alexandrov, Ludmil B and Arlt, Volker M and Weninger, Annette and Hollstein, Monica and Stratton, Michael R and Phillips, David H},
+  journal={Mutagenesis},
+  volume={30},
+  number={6},
+  pages={763--770},
+  year={2015},
+  publisher={Oxford University Press UK}
+}
+@article{alexandrov2013deciphering,
+  title={Deciphering signatures of mutational processes operative in human cancer},
+  author={Alexandrov, Ludmil B and Nik-Zainal, Serena and Wedge, David C and Campbell, Peter J and Stratton, Michael R},
+  journal={Cell reports},
+  volume={3},
+  number={1},
+  pages={246--259},
+  year={2013},
+  publisher={Elsevier}
+}
