New case study, updated introduction

--- a/main.bib
+++ b/main.bib
@@ -251,3 +251,23 @@
   year={2013},
   publisher={Elsevier}
 }
+@article{helleday2014mechanisms,
+  title={Mechanisms underlying mutational signatures in human cancers},
+  author={Helleday, Thomas and Eshtad, Saeed and Nik-Zainal, Serena},
+  journal={Nature Reviews Genetics},
+  volume={15},
+  number={9},
+  pages={585},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+@article{domchek2010association,
+  title={Association of risk-reducing surgery in BRCA1 or BRCA2 mutation carriers with cancer risk and mortality},
+  author={Domchek, Susan M and Friebel, Tara M and Singer, Christian F and Evans, D Gareth and Lynch, Henry T and Isaacs, Claudine and Garber, Judy E and Neuhausen, Susan L and Matloff, Ellen and Eeles, Rosalind and others},
+  journal={Jama},
+  volume={304},
+  number={9},
+  pages={967--975},
+  year={2010},
+  publisher={American Medical Association}
+}
