--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@ The concept of mutational signatures has been validated by in vitro experiments 
 
 % Importance of mutational signatures
 Observation of mutational signatures and knowledge of the mutational processes that cause them can improve cancer diagnosis and treatment. 
-Mutational signatures have been used to predict deficiency of BRCA1/BRCA2, genes that produce tumor suppressor proteins \cite{domchek2010association}.
+Mutational signatures have been used to predict deficiency of BRCA1 and BRCA2, genes that produce tumor suppressor proteins \cite{domchek2010association}.
 Knowledge of such deficiencies in breast cancers can allow therapeutic response to be predicted as early as the first biopsy \cite{davies2017hrdetect}.
 In colorectal cancers, mutational signatures have enabled identification of base excision repair (BER) defects \cite{pilati2017mutational}. 
 BER is a repair process that enables altered DNA bases to be recognized and removed, with defects in this process causing multiple mutation patterns to arise \cite{helleday2014mechanisms}.
