--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,10 @@ The cBio Portal also contains features for computing mutual exclusivity and co-o
 The UCSC Xena Browser supports gene, exon, miRNA and protein expression, copy number, DNA methylation and somatic mutation data along with phenotypes, subtype classifications and genomic biomarkers \citep{goldman2014ucsc,goldman2016ucsc}.
 FireBrowse is a cancer data browser that does include plots of mutation signature exposure that can be compared to clinical data, but only includes 5 signatures for analysis.
 It is unclear what these 5 signatures represent or if any of these are related to any of the widely-used signatures published by Catalogue Of Somatic Mutations In Cancer (COSMIC).
+% TODO: sentence about mSignatureDB
+
+% TODO: paragraph about current "static" visualizations (move references to figures in other papers out of plot descriptions to here). specify that these plots are not interactive
+
 \subsection{Contributions}
 A browser that can easily visualize mutation datasets and contributions of the over thirty currently known mutational signatures is needed, as it could allow trends and relationships with clinical data to be spotted easily.
 This could further understanding of the underlying mutational processes that cause certain signatures to be expressed.
@@ -179,7 +183,7 @@ Figure \ref{fig:caseStudy2} shows these rainfall plots and the mutation category
 These plots could be used to discover further trends occurring in regions of hypermutation, such as significant rates of mutations that fall into categories with patterns other than T[C\textgreater T]X and C[C\textgreater T]X in specific cancer types.
 Such discoveries can be communicated to others easily, as iMuSE URLs include information about current plot states.
 
-% TODO: new case study on hypermutation regions not found by current approaches
+% TODO: change terms "hypermutation"/"kataegic event", use "signal" or "interesting"
 \subsection{Discovery of Hypermutation Regions}
 As previously mentioned, there have been recent efforts to better detect instances of kataegis \citep{yousif2018origins}.
 \citet{alexandrov2013signatures} describes an early definition of kataegis as a set of 6 or more mutations with an average intermutational distance of less than 1,000 base pairs.
