--- a/main.tex
+++ b/main.tex
@@ -133,6 +133,7 @@ In addition, D3 contains APIs for easy implementation of custom interactive feat
 Interactivity extends beyond single plots, linking plots together based on variables such as chromosome region and donor.
 
 % Code and hosted version
+% TODO: links as footnotes since they overflow
 Code for iMuSE is open-source and available through the following repositories: \url{https://github.com/lrgr/mutation-signature-explorer}, \url{https://github.com/lrgr/mutation-signature-explorer-server}.
 While this software can be run locally, accessing a hosted version may be easier for some users.
 Currently, an instance of the Flask-powered web server is deployed to Heroku.
